log
Fri, May 16, 2025  9:35:10 AM: 
 sudoku.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:8: error: 'is_final' undeclared (first use in this function)
     if(is_final) return listAdj;
        ^~~~~~~~
sudoku.c:54:8: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:90:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
